# KvickStore

./: .gitignore  KvickStore.py  README.md  run_tests.py  setup.cfg  setup.py
KvickStore/: KvickStore.py  __init__.py
docs/: KvickStore.html  index.html
tests/: tests.py
