[metadata]
name = KvickStore
description = A simple key-value store for Python
long_description_content_type = text/markdown
url = https://github.com/rm206/KvickStore
project_urls =
    Bug Tracker = https://github.com/rm206/KvickStore/issues
    Changelog = https://github.com/rm206/KvickStore/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
package_dir =
    = KvickStore
packages = find:
python_requires = >=3.6

[options.packages.find]
where = KvickStore